# e-gov-hourei-to-obsidian

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  docker-compose.yml  law-scraper.sh  package.json  pnpm-lock.yaml
data/: law_name_dict.json  unresolved_refs.json
data/scrape_dumps/334AC0000000121/: summary.json
src/: api.ts  args.ts  cli.test.ts  cli.ts  config.ts  fixture.test.ts  index.ts  main.rs  notes.test.ts  notes.ts  process.ts  render.test.ts  render.ts  scrape.ts  storage.test.ts  storage.ts  types.ts  utils.ts
tests/fixtures/: law_data_tokkyoho.json  laws_tokkyoho.json
tests/fixtures/scrape_dumps/334AC0000000121/: page.html
tools/: e2e_docker.sh  poc_fetch_law.mjs  poc_fetch_law.ts
